Added labels to the bars

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -15,5 +15,8 @@
   height: 0px;
   margin-left: 0px;
   top: 0px;
-  background: #006600;
+  background: #008000;
+  text-align: center;
+  color: #FFFFFF;
+  line-height: 0px;
 }
