--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -2,7 +2,7 @@
   width: 500px;
   height: 300px;
   margin-top: 50px;
-  margin-left: 50px;
+  margin-left: 150px;
   border-left: 1px solid #555555;
   border-bottom: 1px solid #555555;
   background: #FFFFFF;
@@ -24,7 +24,7 @@
   width: 500px;
   height: 200px;
   margin-top: 0px;
-  margin-left: 50px;
+  margin-left: 150px;
   background: #FFFFFF;
 }
 
@@ -39,4 +39,14 @@
   line-height: 0px;
   transform: rotate(270deg);
   transform-origin: left top 0;
+}
+
+#div5{
+  top: 0;
+  position: absolute;
+  width: 100px;
+  height: 300px;
+  margin-top: 50px;
+  margin-left: 50px;
+  background: #00FF00;
 }
