--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,7 +1,7 @@
 #div1{
   width: 500px;
   height: 300px;
-  margin-top: 50px;
+  margin-top: 100px;
   margin-left: 150px;
   border-left: 1px solid #555555;
   border-bottom: 1px solid #555555;
@@ -46,7 +46,7 @@
   position: absolute;
   width: 100px;
   height: 300px;
-  margin-top: 50px;
+  margin-top: 100px;
   margin-left: 50px;
   background: #FFFFFF;
 }
@@ -61,4 +61,19 @@
   background: #FFFFFF;
   text-align: right;
   margin-bottom: 0px;
+}
+
+#div7{
+  top: 0;
+  position: absolute;
+  width: 0px;
+  height: 100px;
+  margin-top: 0px;
+  margin-left: 150px;
+  background: #FFFFFF;
+  text-align: center;
+  color: #000000;
+  font-size: 14pt;
+  font-weight: bold;
+  line-height: 100px;
 }
