--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -20,6 +20,8 @@
   text-align: center;
   color: #FFFFFF;
   line-height: 0px;
+  animation-duration: 8s;
+  animation-name: test;
 }
 
 /* X-axis label area */
@@ -83,4 +85,14 @@
   font-size: 14pt;
   font-weight: bold;
   word-wrap: break-word;
+}
+
+@keyframes test{
+  0%{
+    max-height: 0%;
+
+  }
+  100%{
+    max-height: 100%;
+  }
 }
