--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -20,7 +20,7 @@
   text-align: center;
   color: #FFFFFF;
   line-height: 0px;
-  animation-duration: 8s;
+  animation-duration: 3s;
   animation-name: test;
 }
 
@@ -89,10 +89,9 @@
 
 @keyframes test{
   0%{
-    max-height: 0%;
-
+    height: 0;
   }
   100%{
-    max-height: 100%;
+    height: height;
   }
 }
