Converted the singleBarChart function to use jQuery

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -29,8 +29,7 @@
   width: 500px;
   height: 200px;
   margin-top: 0px;
-  margin-left: 100px;
-  background: #FFFFFF;
+  background: #808000;
 }
 
 /* X-axis labels */
