Updated examples in the index.html file

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -10,6 +10,12 @@
   background: #FFFFFF;
 }
 
+#barChart3{
+  width: 800px;
+  height: 600px;
+  background: #FFFFFF;
+}
+
 #chartArea{
   position: absolute;
   width: 500px;
